# mofc

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  NEWS  README  autoconfiscate.sh  backend.h  backend_print.c  backend_sfcb.c  configure.ac  hash.c  hash.h  mofc.y  mofdecl.h  mofparse.c  mofs.l  symtab.c  symtab.h  testlex.sh  testparse.sh
tests/: test2.mof
